{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlacementMode",
            "id": "578cd1fb-f033-4c9d-994f-1c254f702018",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "3bb575ba-befe-46b5-b1f5-c4bc966a4090",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Place",
                    "type": "Button",
                    "id": "f0e15099-4dcd-4ce8-89d2-b2595346872a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "37895875-860c-4b20-96d5-4c9664419ad6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c19b69ab-058c-4005-9d92-8459c8544e89",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b2cf13a-1b62-436b-ab18-69db26cb873e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Place",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "934848b6-c2e3-486e-92a8-6bacf066e657",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}